fix：更新angular动态表单踩坑记录

--- a/docs/angular/动态表单设置初始值.md
+++ b/docs/angular/动态表单设置初始值.md
@@ -50,6 +50,26 @@ formGroup.setValue({
 
 #### 踩坑
 
+##### 坑一
+
 > 若表单使用的是自定义校验，在自定义校验方法内存在无法访问到外部类中的上下文对象，可通过 `闭包` 的方式解决
 >
 > 造成这种问题的原因是，函数中的 `this` 指向始终是指向调用者对象
+
+##### 坑二
+
+> 使用动态（响应式）表单前，需要在 `xx.module.ts` 文件中引入 `ReactiveFormsModule` 才能正常使用，如下为在 `app.module.ts` 中引入
+
+```js
+import { FormsModule, ReactiveFormsModule } from '@angular/forms';
+
+@NgModule({
+  imports: [
+    FormsModule,
+    ReactiveFormsModule,
+  ],
+})
+```
+
+**参考：**[Sharing modules](https://angular.io/guide/sharing-ngmodules)
+
