fix：记录表单控件缓存问题

--- a/docs/angular/动态表单设置及问题处理.md
+++ b/docs/angular/动态表单设置及问题处理.md
@@ -1,4 +1,4 @@
-### Angular 动态表单设置初始值
+### Angular 动态表单设置及问题处理
 
 #### 需求
 
@@ -72,4 +72,16 @@ import { FormsModule, ReactiveFormsModule } from '@angular/forms';
 ```
 
 **参考：**[Sharing modules](https://angular.io/guide/sharing-ngmodules)
+
+##### 坑三
+
+> 表单控件缓存问题，`input` 框内容存在缓存问题，可使用以下方式清除
+
+```html
+<!--整个表单禁止-->
+<form  autocomplete="off"></form>	
+===OR===
+<!--单独禁止某个控件-->
+<input  autocomplete="off" />
+```
 
