fix: 修改布冯描述信息

--- a/docs/angular/动态表单值设置及问题处理.md
+++ b/docs/angular/动态表单值设置及问题处理.md
@@ -1,10 +1,11 @@
 ### Angular 动态表单值设置及问题处理
 
-#### 需求
+### :: 需求
 
 > 使用 `angular` 中的动态表单设置初始值
 
-##### 方式一
+### :: 解决方案
+##### :: 方式一 ::
 
 > 官方说明：1）为表单控件设置新值；2）修补控件的值
 
@@ -14,7 +15,7 @@ formGroup.controls[fieldName].setValue(value)
 formGroup.controls[fieldName].patchValue(value)
 ```
 
-##### 方式二
+##### :: 方式二 ::
 
 > 官方说明：`get()` ，检索给定控件的名称或路径的子控件
 
@@ -24,7 +25,7 @@ formGroup.controls[fieldName].patchValue(value)
 formGroup.get(fieldName)?.setValue(value)
 ```
 
-##### 方式三
+##### :: 方式三 ::
 
 > 官方说明：修补 `FormGroup` 的值。它接受以控件名称作为键的对象，并尽力将值与组中的正确控件进行匹配
 
@@ -34,7 +35,7 @@ formGroup.get(fieldName)?.setValue(value)
 formGroup.patchValue({fieldName: value})
 ```
 
-##### 方式四
+##### :: 方式四 ::
 
 > 官方说明：设置 `FormGroup` 的值。它接受一个与组结构匹配的对象，以控件名称作为键
 
@@ -48,15 +49,15 @@ formGroup.setValue({
 })
 ```
 
-#### 踩坑
+### :: 踩坑
 
-##### 坑一
+##### :: 坑一 ::
 
 > 若表单使用的是自定义校验，在自定义校验方法内存在无法访问到外部类中的上下文对象，可通过 `闭包` 的方式解决
 >
 > 造成这种问题的原因是，函数中的 `this` 指向始终是指向调用者对象
 
-##### 坑二
+##### :: 坑二 ::
 
 > 使用动态（响应式）表单前，需要在 `xx.module.ts` 文件中引入 `ReactiveFormsModule` 才能正常使用，如下为在 `app.module.ts` 中引入
 
@@ -71,9 +72,7 @@ import { FormsModule, ReactiveFormsModule } from '@angular/forms';
 })
 ```
 
-**参考：**[Sharing modules](https://angular.io/guide/sharing-ngmodules)
-
-##### 坑三
+##### :: 坑三 ::
 
 > 表单控件缓存问题，`input` 框内容存在缓存问题，可使用以下方式清除
 
@@ -85,3 +84,7 @@ import { FormsModule, ReactiveFormsModule } from '@angular/forms';
 <input  autocomplete="off" />
 ```
 
+### :: 衍伸阅读
+[@angular/forms](https://angular.cn/api/forms)
+[FormGroup](https://angular.cn/api/forms/FormGroup)
+[FormControl](https://angular.cn/api/forms/FormControl)
