fix: 更新记录信息

--- a/docs/虚拟化/Docker/基本概念介绍.md
+++ b/docs/虚拟化/Docker/基本概念介绍.md
@@ -130,4 +130,4 @@ docker rmi <镜像ID>
 4. **Dockerfile** 用来定义如何构建一个镜像。
 5. Docker **相比传统虚拟机更轻量、启动更快**，并且可以确保应用在不同环境中的一致性。
 
-希望这些解释能帮助你更好地理解 Docker 的基本概念。\
+希望这些解释能帮助你更好地理解 Docker 的基本概念。
